Implement Supabase backend with comprehensive database schema, RLS policies, R2 image upload service, and core utilities.

--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,7 @@ app.*.map.json
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
+# Environment Variables - DO NOT COMMIT
+.env
+*.env
+!.env.example
