--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,11 +18,19 @@ dependencies:
   provider: ^6.1.2
   file_picker: ^10.3.7
   fl_chart: ^1.1.1  # Use this specific stable version
+  supabase_flutter: ^2.0.0
+  flutter_dotenv: ^5.1.0
+  dartz: ^0.10.1
+  http: ^1.1.0
+  path: ^1.8.3
+  uuid: ^4.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  mockito: ^5.4.0  # Mocking for tests
+  build_runner: ^2.4.0  # Required for mockito code generation
 
 dependency_overrides:
   vector_math: ^2.1.4 # Standard versioning
