--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,12 @@ dependencies:
   http: ^1.1.0
   path: ^1.8.3
   uuid: ^4.0.0
+  equatable: ^2.0.5
+  connectivity_plus: ^6.0.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0  connectivity_plus: ^7.0.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
