--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,8 @@ dependencies:
   equatable: ^2.0.5
   connectivity_plus: ^6.0.3
   hive: ^2.2.3
-  hive_flutter: ^1.1.0  connectivity_plus: ^7.0.0
-  hive: ^2.2.3
   hive_flutter: ^1.1.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
