--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   geolocator: ^14.0.2
   intl: ^0.20.2
   timeago: ^3.6.0
+  app_links: ^6.3.3  # Deep link handling
 
 dev_dependencies:
   flutter_test:
